--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.2.5",
+    "help": "^3.0.2",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.2",
     "@iconify-json/carbon": "^1.1.3",
+    "@iconify-json/mdi": "^1.1.9",
     "@types/node": "^17.0.23",
     "@unocss/reset": "^0.31.0",
     "@vitejs/plugin-vue": "^2.3.1",
