--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@antfu/eslint-config": "^0.20.2",
     "@iconify-json/carbon": "^1.1.3",
     "@iconify-json/mdi": "^1.1.9",
+    "@types/canvas-confetti": "^1.4.2",
     "@types/node": "^17.0.23",
     "@unocss/reset": "^0.31.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/test-utils": "^2.0.0-rc.19",
+    "canvas-confetti": "^1.5.1",
     "eslint": "^8.13.0",
     "jsdom": "^19.0.0",
     "pnpm": "^6.32.6",
